# rx

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLI_SPEC.md  CONFIG_SPEC.md  CONTRACT.md  Cargo.toml  IMPLEMENT_AGENT_FEATURE_PLAN.md  IMPLEMENT_BASH_TOOL_PLAN.md  IMPLEMENT_EXEC_TOOL_ALTERNATIVES_PLAN.md  IMPLEMENT_RX_DURABLE_PLAN.md  IMPLEMENT_RX_MINIMAL_PLAN.md  IMPLEMENT_SUBAGENT_TOOL_PLAN.md  KERNEL.md  LOOP_PROMPT.md  README.md  ROADMAP.md  SELF_IMPROVEMENT.md  TEST_GUIDELINES.md  TOOL_IMPROVEMENTS_ROADMAP.md  loop.sh  opencode.json  update_tools.py
.rx/: config.toml
docs/: openai-responses-create.md
evals/: README.md  run.sh
evals/features/: kernel-loop.md  tool-registry.md
evals/tools/: apply_patch.md  bash.md  done.md  exec.md  list_dir.md  read_file.md  write_file.md
plans/: IMPLEMENT_LIST_FILES_TOOL_ALTERNATIVES_PLAN.md  IMPLEMENT_READ_FILE_TOOL_ALTERNATIVES_PLAN.md  IMPLEMENT_WRITE_PRECONDITIONS_AND_ATOMIC_EDITS_PLAN.md  IMPLEMENT_WRITE_TOOL_ALTERNATIVES_PLAN.md
src/: config.rs  config_loader.rs  debug_logger.rs  event.rs  kernel.rs  main.rs  model.rs  runtime_hooks.rs  sqlite_state.rs  state.rs  tool.rs  utils.rs
src/rx-core/: Cargo.toml
src/tools/: bash.rs  done.rs  exec.rs  exec_capture.rs  exec_common.rs  exec_status.rs  exec_with_input.rs  find_files.rs  fs.rs  fs_common.rs  glob_search.rs  list_dir_entries.rs  mod.rs  read_file_head.rs  read_file_range.rs  read_file_tail.rs  search_in_file.rs  stat_file.rs  which_command.rs
