[package]
name = "rx"
version = "0.1.0"
edition = "2021"
default-run = "rx"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.28", features = ["bundled", "chrono"] }
dirs = "4.0"
r2d2 = "0.8"
r2d2_sqlite = "0.21"
toml = "0.5"
which = "4.4"
globset = "0.4"

[[bin]]
name = "apply_patch"
path = "src/bin/apply_patch.rs"
