[package]
name = "rx"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.30.0"
anyhow = { version = "1.0", default-features = false }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
